--- a/poster-styles.css
+++ b/poster-styles.css
@@ -6,12 +6,17 @@ html {
   min-height: 100%;
 }
 body {
-  padding: 3vw 5vw;
+  padding: 1vw 2vw;
   min-height: 100%;
   position: relative;
   background-color: skyblue;
   font-family: 'Libre Bodoni';
   color: #333;
+}
+@media (min-width: 600px) {
+  body {
+    padding: 2.5vw 4.5vw;
+  }
 }
 u {
   color: #A00B0B;
@@ -19,7 +24,7 @@ u {
 }
 h1 {
   margin: 0;
-  font-size: calc(25px + .5vw);
+  font-size: calc(20px + .7vw);
 }
 code {
   font-family: 'Roboto Mono';
@@ -29,32 +34,66 @@ h1 small {
   font-size: calc(12px + .5vw);
   display: block;
 }
+
+.puzzle-location {
+  font-size: calc(10px + .5vw);
+  display: grid;
+  gap: 2vw;
+  grid-template-columns: 20vw 1fr;
+  align-items: center;
+  margin-bottom: 8vw;
+}
+.info p {
+  font-size: calc(10px + .7vw);
+  margin: 0;
+  line-height: 1.5;
+}
 .qr-code {
-  text-align: center;
-  font-size: calc(14px + .5vw);
+  display: none;
 }
-.qr-code img {
-  border-radius: 1vw;
-  border: 2px solid #a53232;
+
+@media (min-width: 600px) {
+  .puzzle-location {
+    grid-template-columns: 20vw 1fr 15vw;
+    margin-bottom: 5vw;
+  }
+  .qr-code {
+    display: block;
+    text-align: center;
+    font-size: calc(14px + .5vw);
+    white-space: nowrap;
+  }
+  .qr-code img {
+    border-radius: 1vw;
+    border: calc(1px + .2vw) solid #a53232;
+    display: block;
+  }
 }
+
 .box {
   position: relative;
-  box-shadow: 5px 5px 0 var(--shadow);
+  box-shadow: .4vw .4vw 0 var(--shadow);
   background-color: var(--dialog-background);
   border-radius: 1vw;
   box-sizing: border-box;
-  border: 2px solid #a53232;
+  border: calc(1px + .2vw) solid #a53232;
 }
-.dialog {
-  font-size: calc(12px + .5vw);
-  line-height: 1.5;
-  padding: 1.5vw;
+.ahoy {
+  left: 16vw;
+  display: inline-block;
+  position: absolute;
+  width: 15vw;
+  top: 8vw;
 }
-.dialog-pointer {
-  width: 2vw;
-  left: -2vw;
-  top: 0;
+@media (min-width: 600px) {
+  .ahoy {
+    top: 9vw;
+  }
+  /* .dialog-pointer {
+    top: 3vw;
+  } */
 }
+
 .puzzle-container {
   position: relative;
   padding: .5vw 11vw 24vw;
@@ -71,14 +110,6 @@ h1 small {
   margin: auto;
   width: 25vw;
   position: absolute;
-}
-.ahoy {
-  background: white;
-  display: inline-block;
-  top: 3vw;
-  margin-left: 3vw;
-  position: absolute;
-  white-space: nowrap;
 }
 .skull {
   width: 16vw;
@@ -129,7 +160,7 @@ h1 small {
   justify-content: space-between;
   align-items: center;
   font-family: 'Source Code Pro';
-  font-size: calc(16px + .5vw);
+  font-size: calc(14px + .7vw);
   line-height: 1;
   width: 100%;
   height: 100%;
@@ -137,20 +168,7 @@ h1 small {
   padding: 2vw;
   margin: 5vw auto;
 }
-.puzzle-location {
-  font-size: calc(10px + .5vw);
-  display: grid;
-  gap: 2vw;
-  grid-template-columns: 20vw 1fr 15vw;
-  align-items: center;
-  margin-bottom: 5vw;
-}
-.info p {
-  font-size: calc(14px + .5vw);
-  margin: 0;
-  line-height: 1.5;
-}
 .signup {
-  font-size: calc(12px + .5vw);
+  font-size: calc(10px + .7vw);
   text-align: center;
 }
